# RAGBis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/processed/: chunks.csv  chunks.json
data/raw/: en_latest__sources_index.rst.txt.txt  en_latest__sources_user-documentation_general-users_index.rst.txt.txt  en_latest_index.html.txt  en_latest_index.txt  en_latest_software-developer-documentation_apis_index.html.txt  en_latest_software-developer-documentation_client-side-extensions_index.html.txt  en_latest_software-developer-documentation_development-environment_index.html.txt  en_latest_software-developer-documentation_legacy-server-side-extensions_index.html.txt  en_latest_software-developer-documentation_server-side-extensions_index.html.txt  en_latest_system-documentation_changelog_index.html.txt  en_latest_system-documentation_configuration_index.html.txt  en_latest_system-documentation_docker_index.html.txt  en_latest_system-documentation_standalone_index.html.txt  en_latest_user-documentation_advance-features_index.html.txt  en_latest_user-documentation_general-admin-users_index.html.txt  en_latest_user-documentation_general-users_ELN-types.html.txt  en_latest_user-documentation_general-users_additional-functionalities.html.txt  en_latest_user-documentation_general-users_barcodes.html.txt  en_latest_user-documentation_general-users_data-archiving.html.txt  en_latest_user-documentation_general-users_data-export.html.txt  en_latest_user-documentation_general-users_data-upload.html.txt  en_latest_user-documentation_general-users_general-overview.html.txt  index.txt  (+8 more)
docs/: chatbot_architecture_visual.html  markdown_rendering_demo.html  multi_agent_architecture.md  usage.md
examples/: multi_agent_demo.py
scripts/: openbis-chatbot  openbis-processor  openbis-scraper  run_web.py
tests/: conftest.py  test_chunker.py  test_main.py  test_ollama.py  test_simple.py
(+47 files in other folders)
